# University

./: .gitignore  README.md  main.cpp
.metals/: metals.lock.db
2017-18-1/SzamAlap/beadando1/: kedvencmobiljatekom.html  mobil-KOCSISABELASUS.html  (+1 more)
2017-18-1/Web1/: Bevezetes.html  Galeria.html  Kerdoiv.html  MiIsEz.html  Modszerek.html  Osszegzes.html
2017-18-2/Agda/: Ex_finished.agda
2018-19-2/Adatbázisok 1/: README.txt  mego1.sql  mego2.sql
2018-19-2/Halado Haskell/: HW10.hs  README.md  Vizsga2.hs
2018-19-2/Komputeralgebra rendszerek/: Algebra_5.sagews  Algebra_6.sagews  Kifejezesek_8.sagews  Kifejezesek_9.sagews  README.md
2018-19-2/Numerikus Módszerek 2/: HFP1_2.m  HFP3_2.m  HFP3_2_ell.m  HFP4_2.m  HFP4_2_ell.m
2018-19-2/Operációs rendszerek/: Feladat.md  README.md
2018-19-2/Szoftvertechnológia/: README.md  qui
2018-19-2/Szoftvertechnológia/Communication/ChatRoom.Boost/: CMakeCache.txt  CMakeLists.txt  chat_client  chat_message.hpp  chat_server.cpp  client.cpp  cmake_install.cmake  server  server.cpp
ELTE/CompAlg/: GrafikaI_6.sagews
ELTE/EVA/: README.md
ELTE/HASK/: README.md
ELTE/OPRE/: README.md
ELTE/SzofTech/: README.md
ELTE/SzofTech/TowerDefense/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ELTE/SzofTech/TowerDefense/TowerDefense/: Button.frag  GameModel.h  GameView.h  Player.cpp  Soldier.h  Square.frag  Structures.h  Tower.cpp  Tower.h  TowerDefense.vcxproj  mock_network.cpp  network.cpp  network.h
ELTE/Thesis/: README.md
UoE/BDL/: FairSwap.sol  README.md  assign4.sol  morra.sol
UoE/IoTSSC/: README.md
(+380 files in other folders)
